[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme_assets/OptionB_SuperstarMemesbruh03.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/screens/Menus/Intro.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Control/Title:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Control/Title:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/SpaceBottom/Instructions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/SpaceBottom/Ranking:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "ShowInstructions"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/SpaceBottom/Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/SpaceBottom/Ranking:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "ShowRanking"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/SpaceBottom/Ranking:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/SpaceBottom/Instructions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[node name="Intro" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )
anims/RESET = SubResource( 3 )
anims/ShowInstructions = SubResource( 4 )
anims/ShowRanking = SubResource( 5 )
next/Intro = "ShowInstructions"
next/ShowInstructions = "ShowRanking"
next/ShowRanking = "ShowInstructions"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpaceTop" type="Control" parent="VBoxContainer"]
margin_right = 224.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="CenterContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 224.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer/Control"]
modulate = Color( 0.0313726, 0.584314, 0, 1 )
margin_left = 31.0
margin_right = 192.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "FROGGER"
percent_visible = 0.0

[node name="SpaceBottom" type="Control" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 224.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Instructions" type="VBoxContainer" parent="VBoxContainer/SpaceBottom"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/SpaceBottom/Instructions"]
margin_right = 208.0
margin_bottom = 8.0
text = "-POINT TABLE-"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SpaceBottom/Instructions"]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 34.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 208.0
margin_bottom = 8.0
text = "10 PTS FOR EACH STEP"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 8.0
margin_right = 208.0
margin_bottom = 16.0
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/SpaceBottom/Instructions"]
margin_top = 44.0
margin_right = 208.0
margin_bottom = 60.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer2"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 208.0
margin_bottom = 8.0
text = "50 PTS FOR EVERY FROG"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer2"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 8.0
margin_right = 208.0
margin_bottom = 16.0
text = "ARRIVE HOME SAFELY"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/SpaceBottom/Instructions"]
margin_top = 70.0
margin_right = 208.0
margin_bottom = 86.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer3"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 208.0
margin_bottom = 8.0
text = "1000 PTS BY SAVING FROGS"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 8.0
margin_right = 208.0
margin_bottom = 16.0
text = "INTO FIVE HOMES"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/SpaceBottom/Instructions"]
margin_top = 96.0
margin_right = 208.0
margin_bottom = 112.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer4"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 208.0
margin_bottom = 8.0
text = "PLUS BONUS"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/SpaceBottom/Instructions/VBoxContainer4"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 8.0
margin_right = 208.0
margin_bottom = 16.0
text = "10 PTS X REMAINING SECOND"
align = 1

[node name="Ranking" type="VBoxContainer" parent="VBoxContainer/SpaceBottom"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/SpaceBottom/Ranking"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 208.0
margin_bottom = 8.0
text = "SCORE RANKIG"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking"]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 74.0
custom_constants/separation = 4

[node name="Rank1" type="HBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer"]
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 7
alignment = 1

[node name="Pos" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank1"]
margin_right = 65.0
margin_bottom = 8.0
size_flags_horizontal = 11
text = "1 SD"
align = 2

[node name="Name" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank1"]
margin_left = 69.0
margin_right = 102.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "AAA "
align = 1

[node name="Pts" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank1"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "00000"
align = 1

[node name="Sufix" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank1"]
margin_left = 142.0
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "PTS"

[node name="Rank2" type="HBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer"]
margin_top = 12.0
margin_right = 208.0
margin_bottom = 20.0
size_flags_horizontal = 7
alignment = 1

[node name="Pos" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank2"]
margin_right = 65.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "2 DN"
align = 2

[node name="Name" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank2"]
margin_left = 69.0
margin_right = 102.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "AAA "
align = 1

[node name="Pts" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank2"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "00000"
align = 1

[node name="Sufix" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank2"]
margin_left = 142.0
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "PTS"

[node name="Rank3" type="HBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer"]
margin_top = 24.0
margin_right = 208.0
margin_bottom = 32.0
size_flags_horizontal = 7
alignment = 1

[node name="Pos" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank3"]
margin_right = 65.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "3 RD"
align = 2

[node name="Name" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank3"]
margin_left = 69.0
margin_right = 102.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "AAA "
align = 1

[node name="Pts" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank3"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "00000"
align = 1

[node name="Sufix" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank3"]
margin_left = 142.0
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "PTS"

[node name="Rank4" type="HBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer"]
margin_top = 36.0
margin_right = 208.0
margin_bottom = 44.0
size_flags_horizontal = 7
alignment = 1

[node name="Pos" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank4"]
margin_right = 65.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "4 TH"
align = 2

[node name="Name" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank4"]
margin_left = 69.0
margin_right = 102.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "AAA "
align = 1

[node name="Pts" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank4"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "00000"
align = 1

[node name="Sufix" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank4"]
margin_left = 142.0
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "PTS"

[node name="Rank5" type="HBoxContainer" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer"]
margin_top = 48.0
margin_right = 208.0
margin_bottom = 56.0
size_flags_horizontal = 7
alignment = 1

[node name="Pos" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank5"]
margin_right = 65.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "5 TH"
align = 2

[node name="Name" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank5"]
margin_left = 69.0
margin_right = 102.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "AAA "
align = 1

[node name="Pts" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank5"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "00000"
align = 1

[node name="Sufix" type="Label" parent="VBoxContainer/SpaceBottom/Ranking/VBoxContainer/Rank5"]
margin_left = 142.0
margin_right = 208.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "PTS"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 224.0
margin_bottom = 256.0
text = "miniJAMEAR PROGRAMACION 2022"
align = 1

[node name="TimeSkip" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="TimeSkip" to="." method="_on_TimeSkip_timeout"]
